--- a/Test_Api_Enhanced/Test_Api_Enhanced.csproj
+++ b/Test_Api_Enhanced/Test_Api_Enhanced.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
+    <PackageReference Include="MySql.Data" Version="9.0.0" />
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.27.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.23.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
